fixed icons gap and size for phone and burger menu

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --background: #f6f2fc;
     --primary: #4831D4;
     --secondary: #CCF381;
-    --project: #8070e1;
+    --project: #095ea3a1;
     
 }
 
@@ -63,7 +63,7 @@ nav, .nav-contents{
 
 nav{
     width: 100%;
-    height: 8vh;
+    height: 55px;
     background-color: var(--background);
     color: var(--text);
 }
@@ -151,7 +151,7 @@ main{
 .project-card-container{
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 3.5rem;
     justify-content: center;
     align-items: start;
 }
@@ -161,8 +161,8 @@ main{
     flex-direction: column;
     justify-content: space-between;
     color: var(--text);
-    width: 300px;
-    height: 350px;
+    width: 320px;
+    height: 380px;
     background-color: transparent;
     border-radius: 10px;
     margin: 0;
@@ -188,7 +188,7 @@ color: var(--background);
 .card p {
 margin: 0;
 color: var(--background);
-font-size: 13px;
+font-size: 15px;
 }
 
 .link-container {
@@ -202,15 +202,21 @@ color: inherit;
 font-weight: bold;
 font-size: 1.2rem;
 color: var(--background);
+background-color: #0f5ec55d  ;
+width: 80%;
+border-radius: 25px;
 }
 
 .card a:hover {
-transform: scale(1.1);
+    transform: scale(1.1);
+    background-color: #0f5ec5e0  ;
+    transition: .5s ease-in-out;
 }
 
 .live-icon {
 font-size: 1.5rem;
 vertical-align: text-top;
+padding-top: 1px;
 }
 
 .skills {
@@ -358,7 +364,7 @@ footer{
     #burger-menu {
       display: block;
       padding: 20px 20px;
-      position: absolute;
+      position: relative;
       z-index: 4;
       width: 100%;
       height: 70px;
@@ -463,8 +469,17 @@ footer{
         padding: .8rem;
     }
 
-    .link img{
-        height: 4rem;
-        width: 4rem;
+    #contact h1{
+        padding-bottom: 40px;
     }
+
+    #social-links{
+        gap: 1.5rem;
+    }
+
+    .link img{
+        height: 3rem;
+        width: 3rem;
+    }
+    
 }  
